Ajout de logs