@@ -1,28 +1,59 @@
 package org.maison.filefinder.view;
 
-import org.maison.filefinder.model.*;
-import org.maison.filefinder.model.criteria.SearchCriteria;
-
-
-import javax.swing.*;
-import javax.swing.event.HyperlinkEvent;
-import javax.swing.event.HyperlinkListener;
-import javax.swing.text.*;
-import java.awt.*;
+import java.awt.Color;
+import java.awt.Container;
+import java.awt.Cursor;
+import java.awt.Dimension;
+import java.awt.FlowLayout;
+import java.awt.GridBagConstraints;
+import java.awt.GridBagLayout;
+import java.awt.Insets;
+import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
-import java.awt.event.KeyAdapter;
-import java.awt.event.KeyEvent;
 import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Comparator;
 
-public class MainWindow extends JFrame implements SearchListener, TextualSearch, Preferences {
+import javax.swing.BorderFactory;
+import javax.swing.JButton;
+import javax.swing.JEditorPane;
+import javax.swing.JFileChooser;
+import javax.swing.JFrame;
+import javax.swing.JLabel;
+import javax.swing.JMenu;
+import javax.swing.JMenuBar;
+import javax.swing.JMenuItem;
+import javax.swing.JOptionPane;
+import javax.swing.JPanel;
+import javax.swing.JScrollPane;
+import javax.swing.JTextField;
+import javax.swing.event.HyperlinkEvent;
+import javax.swing.event.HyperlinkListener;
+import javax.swing.text.BadLocationException;
+import javax.swing.text.DefaultHighlighter;
+import javax.swing.text.Document;
+import javax.swing.text.Highlighter;
+import javax.swing.text.JTextComponent;
 
+import org.maison.filefinder.model.FileFinderException;
+import org.maison.filefinder.model.FileOpener;
+import org.maison.filefinder.model.Preferences;
+import org.maison.filefinder.model.ResultLine;
+import org.maison.filefinder.model.SearchEngine;
+import org.maison.filefinder.model.SearchListener;
+import org.maison.filefinder.model.TextualSearch;
+import org.maison.filefinder.model.UserSelectionMgr;
+import org.maison.filefinder.model.criteria.SearchCriteria;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+public class MainWindow extends JFrame implements SearchListener, TextualSearch, Preferences {
+	 private static Logger LOGGER = LoggerFactory.getLogger(MainWindow.class.getName());
     // An instance of the private subclass of the default highlight painter
     Highlighter.HighlightPainter myHighlightPainter = new MyHighlightPainter(Color.yellow);
     private boolean ascending = false;
@@ -125,7 +156,7 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
 
 
     public void doClick(String filepath) throws MalformedURLException {
-        this.area.fireHyperlinkUpdate(new HyperlinkEvent(this, HyperlinkEvent.EventType.ACTIVATED, new URL(filepath)));
+        this.area.fireHyperlinkUpdate(new HyperlinkEvent(this, HyperlinkEvent.EventType.ACTIVATED, URI.create(filepath).toURL()));
     }
 
     private JPanel createGraphicalCriterias() {
@@ -303,7 +334,7 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
                 }
                 File file = new File(textFieldDirectory.getText());
                 if (file.isDirectory() && file.exists()) {
-                    System.out.println("Repertoire entré: " + file.getAbsolutePath());
+                	LOGGER.debug("Repertoire entré: " + file.getAbsolutePath());
                     UserSelectionMgr.get().setDirectorySelected(textFieldDirectory.getText());
                 }else{
                     JOptionPane.showMessageDialog(MainWindow.this, "Le répertoire " + file.getAbsolutePath() + " n'existe pas." , "Directory does not exist", JOptionPane.ERROR_MESSAGE);
@@ -350,7 +381,7 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
 
     private boolean validatePath(String filepath){
         String regexp = "^(.*)[ ](.*)$";
-        System.out.println("TEXT:" + filepath);
+        LOGGER.debug("TEXT:" + filepath);
         if (filepath.matches(regexp)){
             JOptionPane.showMessageDialog(null,
                     "Les répertoires  un espace ne sont pas autorisés.",
@@ -367,12 +398,13 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
                 public void actionPerformed(ActionEvent e) {
                     if (checkDirectory()) {
                         if (checkFileFilter()) {
+                   
                             launchSearch();
                         } else {
-                            System.out.println("bad filefilter");
+                        	LOGGER.debug("bad filefilter");
                         }
                     } else {
-                        System.out.println("bad directory");
+                    	LOGGER.debug("bad directory");
                     }
                 }
             };
@@ -415,9 +447,9 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
             String finTable = "</table></center>";
             String textFinal = "<html>" + text + builder.toString() + (builder.toString().contains("<table") ? finTable : "") + "<br><b>" + DateTimeFormatter.ofPattern("YYYY-MM-dd HH:mm:ss").format(LocalDateTime.now()) + "-  Recherche terminée.</b></body></html>";
             area.setText(textFinal);
-            System.out.println(textFinal);
+            LOGGER.debug(textFinal);
             updateUI();
-            System.out.println(">>>>>>>>>>>>>>>>>>MAINWINDOW END<<<<<<<<<<<<<<<<<");
+            LOGGER.debug(">>>>>>>>>>>>>>>>>>MAINWINDOW END<<<<<<<<<<<<<<<<<");
             area.setCursor(Cursor.getPredefinedCursor(Cursor.DEFAULT_CURSOR));
 
         }
@@ -425,7 +457,6 @@ public class MainWindow extends JFrame implements SearchListener, TextualSearch,
 
     public void addResult(String results, long size, String date) {
         date = date.replaceAll("T", " ");
-        System.out.println("DATE>>>>" + date);
         if (date.indexOf('.') != -1) {
             date = date.substring(0, date.indexOf('.'));
         } else {
